2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Ok, I've thought up of a possible workaround for the threading issues.

2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Added temporary hack in get_background_items back in again to try and work
	around the multiple emblem problem (because it seems to work).

2008-12-30  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Implemented cache to significantly improve performance. Also fixed bug
	which resulted in watches being added recursvily on the parent
	directory for every direct child item (see code review for more info),
	that was obviously a major performance drag.
	
	Not 100% sure if the status cache is implemently correctly, it's quite ugly.

2008-12-29  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Described multiple emblem bug in detail, added sequence diagram to describe
	the interaction with StatusMonitor, modified debug statements and improved
	several comments.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Whoops, updated comment. I meant counterlog.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/data/icons/hicolor/scalable/actions/nautilussvn-async
	hronous.svg:
	Forgot to add emblem.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Added all the information I have in my head about the problems with 
	threading within a Nautilus Python extension including a debug callback
	demonstrating the problems.

2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* packages/ubuntu/debian/do-nautilussvn-restart-nautilus: